fix: adjust sidebar script tag formatting and align back button to the left

--- a/public/css/transaction_detail_css/transaction_detail.css
+++ b/public/css/transaction_detail_css/transaction_detail.css
@@ -50,7 +50,7 @@
 /* Back button */
 .back-btn {
   display: flex;
-  justify-content: center;
+  justify-content: left;
 }
 
 .back-btn a {
